Handle single digit categories and rename images

--- a/tests/assets/image/page_clean.html
+++ b/tests/assets/image/page_clean.html
@@ -15,7 +15,7 @@
     <p class="c1">gdocsync source</p>
     <p class="c1 c4"/>
     <p class="c1">
-      <img alt="" src="images/image1.png" style="width: 624.00px; height: 934.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""/>
+      <img alt="" src="images/12.34-1.png" style="width: 624.00px; height: 934.67px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""/>
     </p>
   </body>
 </html>
