--- a/tests/assets/minutes/page_clean.html
+++ b/tests/assets/minutes/page_clean.html
@@ -38,7 +38,7 @@
       <li class="c0 li-bullet-0">Pizza</li>
     </ul>
     <ul class="c6 lst-kix_vc0ifb3pjp1l-1 start">
-      <li class="c3 li-bullet-0">Gray stripes<br/><img alt="" src="images/image1.png" style="width: 190.00px; height: 130.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""/></li>
+      <li class="c3 li-bullet-0">Gray stripes<br/><img alt="" src="images/12.34-1.png" style="width: 190.00px; height: 130.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""/></li>
     </ul>
   </body>
 </html>
